@@ -2,6 +2,6 @@
 
 $plugin_cf['todo']['folder_data']="";
 
-$plugin_cf['todo']['col_widths']="200,100,400,100,100,100";
+$plugin_cf['todo']['col_widths']="200,100,400,100,100,100,100";
 
 ?>
