@@ -6,14 +6,16 @@ $plugin_tx['todo']['js_notes']="Notes";
 $plugin_tx['todo']['js_responsible']="Responsible";
 $plugin_tx['todo']['js_state']="State";
 $plugin_tx['todo']['js_date']="Date";
+$plugin_tx['todo']['js_vote']="Your vote";
 $plugin_tx['todo']['js_add']="Add";
 $plugin_tx['todo']['js_edit']="Edit";
 $plugin_tx['todo']['js_remove']="Remove";
 $plugin_tx['todo']['js_move']="Move";
+$plugin_tx['todo']['js_voting']="Voting";
 $plugin_tx['todo']['js_ok']="OK";
 $plugin_tx['todo']['js_cancel']="Cancel";
 $plugin_tx['todo']['js_new_task']="New Task";
-$plugin_tx['todo']['js_select_entry']="Select an entry to edit!";
+$plugin_tx['todo']['js_select_entry']="Select an entry first!";
 $plugin_tx['todo']['js_errormsg']="Connection Error";
 $plugin_tx['todo']['js_pagestat']="Displaying {from} to {to} of {total} items";
 $plugin_tx['todo']['js_page']="Page";
@@ -22,6 +24,11 @@ $plugin_tx['todo']['js_findtext']="Find";
 $plugin_tx['todo']['js_procmsg']="Processing, please wait ...";
 $plugin_tx['todo']['js_nomsg']="No items";
 $plugin_tx['todo']['js_confirm_delete']="The selected items will be deleted!";
+
+$plugin_tx['todo']['vote_now']="Now";
+$plugin_tx['todo']['vote_later']="Later";
+$plugin_tx['todo']['vote_never']="Never";
+$plugin_tx['todo']['vote_']="";
 
 $plugin_tx['todo']['state_idea']="idea";
 $plugin_tx['todo']['state_todo']="to do";
