@@ -1,5 +1,7 @@
 Version 1alpha2 - internally released TODO
 cmb	changed: states have classes instead of fixed colors (inspired by svasti)
+cmb	changed: default column widths and font-size larger (suggested by svasti)
+cmb	added possibility to vote (suggested by svasti)
 
 Version 1alpha1 - internally released 2012-06-10
 cmb	fixed bug: empty link field was displayed (reported by svasti)
